== (In Git)

=== New features
* Support a Cucumber.configure method which allows you to configure Cucumber through Ruby and within the same process as Cucumber. The possible configuration options follow those of the command line options. This will be particularly useful for plugin writers and for replacing cucumber.yml (#640 Joseph Wilk)

== Deprecated features
* --exclude. Use --tags ~@sometag instead. (Aslak Hellesøy)

=== Removed features
* AfterConfiguration hook is no longer required. Use the Cucumber.configure instead.

=== Bugfixes
* JUnit formatter now puts output in CDATA sections. (Dmitry Amelchenko)

== 0.8.5 (2010-07-14)

=== Bugfixes
* Location of stepdefs outside the project (in gems) are reported incorrectly. (#583 Aslak Hellesøy)
* Cucumber::Rake::Task uses 'bundle exec' when using bundler (#626 John Firebaugh)

== 0.8.4 (2010-07-12)

=== Bugfixes
* Fix "Errno::EADDRNOTAVAIL" errors that may be received with spork on Snow Leopard. (Lucas Mundim)

=== New features
* Detect limit for negative tags (#636 Aslak Hellesøy)
* Support for RSpec 2 doubles (mocks and stubs) (Aslak Hellesøy)

== 0.8.3 (2010-06-16)

Just a quick bugfix release.

=== Bugfixes
* Scenario outlines that fail with exception exit process (Aslak Hellesøy)

== 0.8.2 (2010-06-16)

Bugfix release which most importantly fixes an issue with the gem's gemspec.

=== Bufixes
* Fix v8 support which broke in 0.8.1 because of new gherkin API (Aslak Hellesøy)
* Call Around hooks for each example in scenario outlines. (John Firebaugh)
* Remove extraneous tmp file from the gemspec, which broke installation in some environments. (Fernando Brito, Aslak Hellesøy)
* 0.8.1 fails on JRuby (#627 Aslak Hellesøy)

=== New Features
* JavaScript to Hide/Expand Scenarios in HTML report (#621 stkenned)

== 0.8.1 (2010-06-15)

=== Bufixes
* generate test report fails: ast/outline_table.rb fails in status() (#615 Aslak Hellesøy)

=== New Features