@@ -50,7 +50,7 @@ Given /^I have environment variable (\w+) set to "([^"]*)"$/ do |variable, value
 end
 
 When /^I run cucumber (.*)$/ do |cucumber_opts|
-  run "#{Cucumber::RUBY_BINARY} -r rubygems #{Cucumber::BINARY} --no-color #{cucumber_opts} CUCUMBER_OUTPUT_ENCODING=UTF-8"
+  run "#{Cucumber::RUBY_BINARY} -r rubygems #{Cucumber::BINARY} --no-color #{cucumber_opts} CUCUMBER_OUTPUT_ENCODING=UTF-8 CUCUMBER_SELF_TEST=true"
 end
 
 When /^I run rake (.*)$/ do |rake_opts|
